/*
  Cosmo Dashboard API
  Manipulate cosmo dashboard resource API
*/

syntax = "proto3";

package dashboard.v1alpha1;

import "google/protobuf/empty.proto";
import "dashboard/v1alpha1/template.proto";

service TemplateService {
  // List templates typed useraddon
  rpc GetUserAddonTemplates(GetUserAddonTemplatesRequest)
      returns (GetUserAddonTemplatesResponse);
  // List templates typed workspace
  rpc GetWorkspaceTemplates(GetWorkspaceTemplatesRequest)
      returns (GetWorkspaceTemplatesResponse);
}

message GetUserAddonTemplatesRequest {
  optional bool use_role_filter = 1;
  optional bool with_raw = 2;
}

message GetUserAddonTemplatesResponse {
  string message = 1;
  repeated Template items = 2;
}

message GetWorkspaceTemplatesRequest {
  optional bool use_role_filter = 1;
  optional bool with_raw = 2;
}

message GetWorkspaceTemplatesResponse {
  string message = 1;
  repeated Template items = 2;
}